@@ -11,6 +11,8 @@
 
 	  Make SPSelTrans and SPSelCue proper C++ classes with constructors.
 
+	* src/document.h, src/dialogs/xml-tree.cpp: removed sp_document_lookup_id
+
 2004-06-26  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/node-context.cpp: make sure nodepath->nodeContext is set up
